# learning_to_hash

./: .gitignore  DSH_metrics_example.py  ITQ_metrics_example.py  README.md  bihalf_metrics_example.py  bihalf_vgg_metrics_example.py  encode.py  get_datasets.sh  hashnet_metrics_example.py  improved_bihalf_metrics.py  install_dependencies.bat  lsh_metrics_example.py  main.py  pyproject.toml  sh_metrics_example.py  test.py  test_example.py
DSH/: dataset.py  model.py  model3.py  train.py  train2.py  train3.py
ITQ/: LICENSE  readme.md
ITQ/hashing/: dataset.py  evaluation.py  itq.py  (+5 more)
ITQ_PyTorch-master/: README.md  itq.py  run.py
feature-extraction/: README.MD  cifar10.py  dataset.py  encode.py  feature_loader.py  imagedata.py  pyproject.toml
feature-extraction/imagenet-autoencoder/: pyproject.toml  utils.py
feature-extraction/imagenet-autoencoder/models/: builer.py
feature-extraction/imagenet-autoencoder/tools/: encode.py
feature_extraction/: README.MD  dataset.py  encode.py  image_net_loader.py
hashnet/: hashnet.py  tools.py
label-generator/: label_generator.py  pyproject.toml
lsh/: LSH_v3.py  LSH_v4.py  Lsh.py  test.py
metrics/: calc_metrics.py  data_loader.py  dataloader.py  feature_loader.py  gen_cifar_simmat.py  hash_lookup.py  metrics_framework.py
metrics-framework/: gen_cifar_simmat.py  main.py  pyproject.toml
models/: test.py
spectral-hashing/: SH.py  bitsop.c  spectral_hash.py  spectral_hash_feature_ex.py  spectral_hash_no_feature_ex.py  spectral_hash_test.py  test_example.py
utility/: alexnet_extractor.py  data_loader.py  feature_loader.py  metrics_framework.py  nuswide_loader.py
(+50 files in other folders)
