[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"


[tool.setuptools]
py-modules = []

[project]
name = "learning-to-hash"
dynamic = ["version"]
description = "Learning to hash"

dependencies = [
    "numpy",
    "scikit-learn",
    "torch",
    "Pillow",
    "torchvision",
    "argparse",
    "tqdm",
    "matplotlib"
]
